--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,5 @@
 /* Styling specific for non-phone screens (will apply to tablets and regular computer screens */
+/*
 @media only screen and (min-width:750px) {
     nav li {
         float:left;
@@ -50,15 +51,19 @@
         display:none;
     }
 }
+/*
 
 /* Styling only for desktop/laptop computers */
+/*
 @media only screen and (min-width:811px) {
     .resume {
         padding-right:33%;
     }
 }
+*/
 
 /* Styling for tablets */
+/*
 @media only screen and (max-width:811px) {
     .home img {
         float:right;
@@ -72,8 +77,10 @@
         padding-right:10%;
     }
 }
+*/
 
 /* Styling just for phone screens */
+/*
 @media only screen and (max-width:749px) {
     header h1 {
         color:white;
@@ -106,9 +113,10 @@
         display:none;
     }
 }
+*/
 
 /* General styling that applies to all devices */
-
+/*
 body {
     background-color:#EEEEEE;
     margin:0;
@@ -241,3 +249,4 @@ td {
 .contact input[type=submit] {
     font-family:Arial, Helvetica, sans-serif;
 }
+*/
