--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,30 +1,11 @@
 /* Styling specific for non-phone screens (will apply to tablets and regular computer screens */
 /*
 @media only screen and (min-width:750px) {
-    nav li {
-        float:left;
-    }
     
-    header h1 {
-        color:white;
-        font-size:425%;
-        padding-left:25px;
-    }
+    
 
     article h1 {
         line-height:.5em;
-    }
-    
-    .home img {
-        float:right;
-        padding-right:10px;
-        padding-bottom:10px;
-        max-width:35vw;
-        height:auto;
-    }
-    
-    .home p {
-        max-width:45%;
     }
 
     table, td, th {
@@ -65,13 +46,6 @@
 /* Styling for tablets */
 /*
 @media only screen and (max-width:811px) {
-    .home img {
-        float:right;
-        padding-right:10px;
-        padding-bottom:10px;
-        max-width:45vw;
-        height:auto;
-    }
 
     .resume {
         padding-right:10%;
@@ -82,17 +56,6 @@
 /* Styling just for phone screens */
 /*
 @media only screen and (max-width:749px) {
-    header h1 {
-        color:white;
-        font-size:250%;
-        text-align:center;
-    }
-
-    .home img {
-        float:inline-start;
-        max-width:100%;
-        height:auto;
-    }
 
     .resume {
         padding-right:10px;
@@ -117,53 +80,6 @@
 
 /* General styling that applies to all devices */
 /*
-body {
-    background-color:#EEEEEE;
-    margin:0;
-}
-
-header {
-    position:relative;
-    background-color:#6495ed;
-    padding-top:10px;
-    padding-bottom:10px;
-    width:100%;
-}
-
-nav ul {
-    list-style-type:none;
-    margin:0;
-    padding:0;
-    overflow:hidden;
-    background-color:dimgray;
-}
-
-nav li a {
-    display:block;
-    color:white;
-    font-family:Arial, Helvetica, sans-serif;
-    text-align:center;
-    padding: 14px 32px;
-    text-decoration:none;
-}
-
-nav li a.active {
-    background-color:gainsboro;
-    color:dimgray;
-}
-
-nav li a:hover {
-    background-color:white;
-    color:dimgray;
-}
-
-h1, h2 {
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-
-section > h2 {
-    padding-left:10px;
-}
 
 article {
     padding-left:10px;
@@ -250,3 +166,131 @@ td {
     font-family:Arial, Helvetica, sans-serif;
 }
 */
+
+/* Styling specific to non-phone screens (will apply to tablets and regular computer screens */
+@media only screen and (min-width:750px) {
+    header h1 {
+        color:white;
+        font-size:425%;
+    }
+
+    nav {
+        line-height:.75em;
+    }
+
+    nav ul {
+        display:inline-block;
+    }
+
+    nav ul li {
+        float:left;
+    }
+
+    .home img {
+        float:right;
+        padding-right:10px;
+        padding-bottom:10px;
+        max-width:35vw;
+        height:auto;
+    }
+    
+    .home p {
+        max-width:45%;
+    }
+}
+
+/* Styling only for desktop/laptop computers */
+@media only screen and (min-width:811px) {
+    
+}
+
+/* Styling for tablets */
+@media only screen and (max-width:811px) {
+    .home img {
+        float:right;
+        padding-right:10px;
+        padding-bottom:10px;
+        max-width:45vw;
+        height:auto;
+    }
+}
+
+/* Styling just for phone screens */
+@media only screen and (max-width:749px) {
+    header h1 {
+        color:white;
+        font-size:250%;
+    }
+
+    .home figure {
+        float:inline-start;
+        margin:10px;
+    }
+
+    .home img {
+        max-width:100%;
+        height:auto;
+    }
+}
+
+/* General styling that applies to all devices */
+
+header {
+    position:relative;
+    background-color:#6495ed;
+    padding-top:10px;
+    padding-bottom:10px;
+    width:100%;
+    text-align:center;
+}
+
+nav {
+    text-align:center;
+    width:100%;
+    background-color:dimgray;
+}
+
+nav ul {
+    list-style:none;
+    margin:0;
+    padding:0;
+    overflow:hidden;
+}
+
+nav ul li a {
+    display:block;
+    color:white;
+    font-family:Arial, Helvetica, sans-serif;
+    text-align:center;
+    padding: 14px 32px;
+    text-decoration:none;
+}
+
+nav ul li a.active {
+    background-color:gainsboro;
+    color:dimgray;
+}
+
+nav ul li a:hover {
+    background-color:white;
+    color:dimgray;
+}
+
+body {
+    margin:0;
+    background-color:#EEEEEE;
+}
+
+h1, h2 {
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+section {
+    margin-left:16.5%;
+    margin-right:16.5%;
+}
+
+section.home {
+    margin:0;
+    padding-left:10px;
+}
