--- a/stylesheet.css
+++ b/stylesheet.css
@@ -248,7 +248,11 @@ body {
 }
 
 h1 {
-    font-size:225%;
+    font-size:250%;
+}
+
+h2 {
+    font-size:175%;
 }
 
 h1, h2 {
@@ -257,21 +261,18 @@ h1, h2 {
 
 p {
     font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size:18px;
 }
 
 .resume-head p {
     text-align:center;
-    font-size:larger;
+    font-size:large;
     font-family:'Times New Roman', Times, serif;
 }
 
 .resume-head b {
     font-family:'Times New Roman', Times, serif;
     font-size:x-large;
-}
-
-.resume {
-    padding-left:10px;
 }
 
 .resume h2 {
@@ -281,29 +282,38 @@ p {
 
 .resume ul li {
     list-style-type:circle;
+    font-size:18px;
 }
 
 .resume ul ul li {
     list-style-type:square;
 }
 
-table, td, th {
-    border:2px solid black;
-    padding:3px;
+table, td, th { 
+    padding:5px;
+    font-size:18px;
 }
 
 table {
     margin-left:auto;
     margin-right:auto;
     border-collapse:collapse;
+    border:4px solid black;
+    width:100%;
+}
+
+td, th {
+    border:2px solid black;
 }
 
 th {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    width:12.5%;
 }
 
 td {
     font-family:Georgia, 'Times New Roman', Times, serif;
+    width:87.5%;
 }
 
 .table-center {
