--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,114 +1,3 @@
-/* Styling specific for non-phone screens (will apply to tablets and regular computer screens */
-/*
-@media only screen and (min-width:750px) {
-    
-    
-
-    
-
-    table, td, th {
-        border:1px solid #696969;
-        padding:5px;
-    }
-
-    .contact {
-        text-align:right;
-        float:left;
-    }
-
-    .contact input[type=submit] {
-        width:315px;
-        float:right;
-    }
-
-    .contact input[type=text], input[type=email], textarea {
-        width:300px;
-        resize:vertical;
-    }
-
-    .small-screen {
-        display:none;
-    }
-}
-/*
-
-/* Styling only for desktop/laptop computers */
-/*
-@media only screen and (min-width:811px) {
-    .resume {
-        padding-right:33%;
-    }
-}
-*/
-
-/* Styling for tablets */
-/*
-@media only screen and (max-width:811px) {
-
-    .resume {
-        padding-right:10%;
-    }
-}
-*/
-
-/* Styling just for phone screens */
-/*
-@media only screen and (max-width:749px) {
-
-    .resume {
-        padding-right:10px;
-    }
-
-    .contact input, .contact textarea {
-        box-sizing:border-box;
-        float:inline-start;
-        width:89vw;
-    }
-
-    .big-screen {
-        display:none;
-    }
-}
-*/
-
-/* General styling that applies to all devices */
-/*
-
-article {
-    padding-left:10px;
-}
-
-article p {
-    
-    padding-right:10px;
-}
-
-.contact {
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    font-size:larger;
-}
-
-.contact label {
-    padding-right:25px;
-}
-
-.contact textarea {
-    vertical-align:top;
-    font-size:small;
-}
-
-.contact input[type=text], input[type=email], textarea {
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    font-size:large;
-    padding:5px;
-    margin-bottom:10px;
-}
-
-.contact input[type=submit] {
-    font-family:Arial, Helvetica, sans-serif;
-}
-*/
-
 /* Styling specific to non-phone screens (will apply to tablets and regular computer screens */
 @media only screen and (min-width:750px) {
     header h1 {
@@ -144,6 +33,21 @@ article p {
     .home p {
         max-width: 45%;
     }
+    
+    .contact {
+        text-align:right;
+        float:left;
+    }
+
+    .contact input[type=submit] {
+        width:315px;
+        float:right;
+    }
+
+    .contact input[type=text], input[type=email], textarea {
+        width:300px;
+        resize:vertical;
+    }
 }
 
 /* Styling only for desktop/laptop computers */
@@ -158,8 +62,7 @@ article p {
 @media only screen and (max-width:811px) {
     .home img {
         float: right;
-        padding-right: 10px;
-        padding-bottom: 10px;
+        padding-right: 0;
         max-width: 45vw;
         height: auto;
     }
@@ -195,6 +98,12 @@ article p {
     section {
         margin: 0;
         padding: 10px;
+    }
+
+    .contact input, .contact textarea {
+        box-sizing:border-box;
+        float:inline-start;
+        width:89vw;
     }
 }
 
@@ -318,4 +227,29 @@ td {
 
 .table-center {
     text-align:center;
+}
+
+.contact {
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size:larger;
+}
+
+.contact label {
+    padding-right:25px;
+}
+
+.contact textarea {
+    vertical-align:top;
+    font-size:small;
+}
+
+.contact input[type=text], input[type=email], textarea {
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size:large;
+    padding:5px;
+    margin-bottom:10px;
+}
+
+.contact input[type=submit] {
+    font-family:Arial, Helvetica, sans-serif;
 }
